static image test

--- a/ahorrapp/ahorrapp/templates/home.html
+++ b/ahorrapp/ahorrapp/templates/home.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h2>This is a home page with template</h2>
+    <img src="{% static '/images/itsdone.gif' %}" alt="">
 </body>
 </html>
