--- a/ahorrapp/ahorrapp/templates/home.html
+++ b/ahorrapp/ahorrapp/templates/home.html
@@ -11,5 +11,8 @@
 <body>
     <h2>This is a home page with template</h2>
     <img src="{% static '/images/itsdone.gif' %}" alt="">
+    {% for product in all_products %}
+        <li>{{ product.name }}</li>
+    {% endfor %}
 </body>
 </html>
