--- a/ahorrapp/ahorrapp/templates/list.html
+++ b/ahorrapp/ahorrapp/templates/list.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}" type="text/css" />
+    <!-- <link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}" type="text/css" /> -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
 </head>
 
@@ -32,8 +32,8 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="/"><img src="{% static 'img/logo.png' %}" alt="" /></a>
-                        <a href="/"><img src="{% static 'img/ahorrapp.png' %}" alt="" /></a>
+                        <a href="/"><img src="{% static 'img/logo.png' %}" alt="ahorrapp_logo"/></a>
+                        <a href="/"><img src="{% static 'img/ahorrapp.png' %}" alt="ahorrapp_text"/></a>
                     </div>
                 </div>
                 <div class="col-lg-9">
