some links are removed

--- a/ahorrapp/ahorrapp/templates/home.html
+++ b/ahorrapp/ahorrapp/templates/home.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/elegant-icons.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css" />
+    <!-- <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css" /> -->
     <link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
 </head>
@@ -109,17 +109,10 @@
     <footer class="footer spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
-                    <div class="footer__widget">
-                        <a href="http://www.sahinmeric.com" target="_blank">About me</a>
-                        <a href="#">Who We Are</a>
-                        <a href="#">Other projects</a>
-                        <a href="mailto:sahin.meric86@gmail.com">Contact</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-6 col-md-12">
                     <div class="footer__widget">
                         <div class="footer__widget__social">
+                            <a href="http://sahinmeric.com" target="_blank"><i class="fa fa-light fa-globe"></i></a>
                             <a href="https://github.com/sahinmeric" target="_blank"><i class="fa fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/sahinmeric/" target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://twitter.com/meric_sahin_" target="_blank"><i class="fa fa-twitter"></i></a>
